More civic adjustments

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -25,6 +25,10 @@ l_english:
 	building_tec_branch_tier_3_tag: "§HTier 3§!"
  # /
 
+ # Utilities
+	tec_building_ascension_scaling:0 "The number of §Y$tec_loc_planet_ascensions$§! of this colony increase some of the effects of this building.\n\n"
+ # /
+
  # Job icons
 	# Admin Swaps
 	job_tec_mecha_priest_icon:0 "£job_tec_mecha_priest£"
@@ -2438,15 +2442,15 @@ l_english:
  # ------------------------------------------------- Basic resources adv
 	building_food_processing_complex:0 "Food Processing Complex"
 	building_food_processing_complex_desc:0 "Advanced Complexes where incredibly large amounts of food can be processed and preserved."
-	tec_building_boost_catalytic_with_tech:0 "This building boost £job_catalytic_technician£ §YCatalytic Technician§! output based on obtained £society£ §YFood§! production technologies. Effect limited until this building is upgraded."
-	tec_building_boost_catalytic_with_tech_max:0 "This building boost £job_catalytic_technician£ §YCatalytic Technician§! output based on obtained £society£ §YFood§! production technologies."
+	tec_building_boost_catalytic_with_tech:0 "This building boost £job_catalytic_technician£ §YCatalytic Technician§! output based on obtained £society£ §YFood§! production technologies. Effect limited until this building is upgraded.\n\n"
+	tec_building_boost_catalytic_with_tech_max:0 "This building boost £job_catalytic_technician£ §YCatalytic Technician§! output based on obtained £society£ §YFood§! production technologies.\n\n"
 
 	building_mineral_purification_complex:0 "Mineral Purification Complex"
 	building_mineral_purification_complex_desc:0 "Massive Complexes where rich minerals are received and then shuttled to arrays of advanced purifiers."
 
 	building_energy_complex:0 "Energy Megacomplex"
 	building_energy_complex_desc:0 "This colossal complex centralizes all energy grids on the planet, improving their efficiency at the maximum amount possible."
-	tec_building_boost_quantum_with_tech_max:0 "This building boost £job_foundry£ §YFoundry§! output based on obtained £physics£ §YEnergy§! production technologies."
+	tec_building_boost_quantum_with_tech_max:0 "This building boost £job_foundry£ §YFoundry§! output based on obtained £physics£ §YEnergy§! production technologies.\n\n"
  # /
  # ------------------------------------------------- Strategic resources
 	building_chemical_plant_2:0 "Particle Refineries"
