--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -433,6 +433,18 @@
  # Auth
 
  # Egal
+	civic_tec_regular_worker_coop:0 "§G£tec_civic_ruler£§!Worker Collective"
+	civic_tec_regular_worker_coop_desc:0 "['concept_tec_ruler_replace_civic']\n\nMembers of this society enjoy an equal share in the labors, profits and aspirations of the cooperative's ventures."
+	civic_tec_regular_worker_coop_tooltip:0 "$civic_tooltip_worker_coop_effects$"
+
+	civic_worker_coop:0 "§G£tec_civic_ruler£§!Worker Cooperative"
+	civic_worker_coop_desc:0 "['concept_tec_ruler_replace_civic']\n\nMembers of this society enjoy an equal share in the labors, profits and aspirations of the cooperative's ventures."
+	civic_tooltip_worker_coop_effects:0 "$tec_loc_c_unlocks_standard$ §H£pop£ $living_standard_worker_ownership$§!\nUnder such living standard:\n- §YAll§! pops have high $r_consumer_goods$ Upkeep, and produce a high amount of §Y$tec_loc_trade$§!.\nDiscriminatory living standards are §RRestricted§! (example: §YAcademic Privilege§!).\n\n$tec_loc_c_unlocks_feature$ §H£trade_value£ Mutual Aid§!\nAllows the §Y$trade_policy_mutual_aid$§! Trade Policy, which converts $r_trade_value$ to $r_energy$, $r_minerals$ and $r_food$.\n\n$tec_loc_c_unlocks_feature$ §H£unity£ Self-Governance§!\nReplaces replace §YALL§! their ['concept_tec_ruler_job_standard_plural_icon'] with ['concept_tec_ruler_job_steward_plural_icon']."
+
+
+	# "Allows §Y$living_standard_worker_ownership$§! Living Standard, under which all £pop£ Pops have high £consumer_goods£ §Y$consumer_goods$§! Upkeep regardless of §YStrata§!\nDisables the use of most other §YLiving Standards§!\nAllows the §Y$trade_policy_mutual_aid$§! Trade Policy, which converts $r_trade_value$ to $r_energy$, $r_minerals$ and $r_food$.\nReplaces £job_executive£ §Y$job_executive$§! and £job_manager£ §Y$job_manager$§! Jobs with £job_manager£ §Y$job_steward$§! Jobs. £job_steward£ §Y$job_steward_plural$§! turn $r_consumer_goods$ into $r_unity$, $r_trade_value$, and $r_amenities$"
+
+
 	civic_tec_regular_procurators:0 "§G£tec_civic_ruler£§!Equality Procurators"
 	civic_tec_regular_procurators_desc:0 "['concept_tec_ruler_replace_civic']\n\nThe protection of equality is an imperative that must be preserved, thats why this society assigns the most qualified to ensure everyone has access to the same resources, the same opportunities and the same."
 	civic_tec_regular_procurators_tooltip:0 "$tec_loc_c_ruler_swap$ §H£job_tec_procurator£ $job_tec_procurator_plural$§!\n£building£ Capital Buildings replace §Yhalf§! their ['concept_tec_ruler_job_standard_plural_icon'] with ['concept_tec_ruler_job_tec_procurator_plural_icon']."
@@ -676,6 +688,15 @@
 		civic_tec_corporate_dystopian_society_desc:1 "['concept_tec_feature_civic']\n['concept_tec_living_standard_civic']\n\nHigh quality products and commodities are reserved to the most loyal and premium clients - those who can afford them. It is the duty of the rest to pay their loans and credits to provide such goods, even if they will never even be close to obtain them."
 		civic_tec_corporate_dystopian_society_tooltip:1 "$civic_dystopian_society_tooltip$"
 	# /
+
+	# Selective Kinship
+		civic_selective_kinship: "Selective Kinship"
+		civic_selective_kinship_desc: "In an uncertain universe, only kin can be trusted. This civilization is selective about the species it defines as equals."
+		civic_selective_kinship_tooltip: "$tec_loc_c_unlocks_feature$ §H£opinion£ Trust not the Xeno§!\nOpinion of Empires with shared ['concept_species_class']: §G+100§!\nOpinion of other Empires: §R-50§!\n£pops£ §YPops§! of our §YSpecies Class§! have Full Citizenship\nOther £pops£ §YPops§! are barred from Full Citizenship"
+
+		civic_tec_corporate_selective_kinship: "Bussiness Kinship"
+		civic_tec_corporate_selective_kinship_desc: "In an uncertain universe, only kin can be trusted. This corporation is selective about the species it defines as suitable for business."
+		civic_tec_corporate_selective_kinship_tooltip: "$civic_selective_kinship_tooltip$"
  # /
 
  # Evolved not done
@@ -1023,7 +1044,7 @@
 	# Catalytic
 		civic_catalytic_processing:0 "§P£tec_civic_job£§!Catalytic Processing"
 		civic_catalytic_processing_desc:0 "['concept_tec_job_alteration_civics_foundry']\n\nBy focusing their industrial efforts on catalytic chemistry, this civilization has unlocked the key to using organic materials in the construction of spacebound structures."
-		civic_catalytic_processing_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Catalytic Production§!\nReplaces ['concept_tec_specialist_job_foundry_plural_icon'] with ['concept_tec_specialist_job_catalytic_technician_icon'] jobs.\n\n$tec_loc_c_unlocks_feature$ §H£alloys£ Biolytic Reaction§!\n£building£ §YFood Processing§! buildings increase the output of §Y£job_catalytic_technician£ $job_catalytic_technician_plural$§! by §G5%§! per §Y£society£ Food Production Technology§! researched (such as Eco-Simulation), up to §G20%§!, based on the building upgrade.\n§HThis bonus is disabled when a similar alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!"
+		civic_catalytic_processing_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Catalytic Production§!\nReplaces ['concept_tec_specialist_job_foundry_plural_icon'] with ['concept_tec_specialist_job_catalytic_technician_icon'] jobs.\n\n$tec_loc_c_unlocks_feature$ §H£alloys£ Biolytic Reaction§!\n£building£ §YFood Processing§! buildings increase the output of §Y£job_catalytic_technician£ $job_catalytic_technician_plural$§! by §G5%§! per §Y£society£ Food Production Technology§! researched (such as Eco-Simulation), up to §G20%§!, based on the building upgrade, increased by §Y$tec_loc_planet_ascension_plural$§!.\n§HThis bonus is disabled when a similar alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!"
 
 		civic_corporate_catalytic_processing:1 "§P£tec_civic_job£§!Catalytic Recyclers"
 		civic_corporate_catalytic_processing_desc:0 "['concept_tec_job_alteration_civics_foundry']\n\nThis Megacorporation seeks to maximize profits by recycling excess organic matter into advanced resources suitable for spacebound structures."
@@ -1031,11 +1052,11 @@
 
 		civic_hive_catalytic_processing:1 "§P£tec_civic_job£§!Catalytic Plasmolysis"
 		civic_hive_catalytic_processing_desc:0 "['concept_tec_job_alteration_civics_foundry']\n\nThe Hive Mind reprocesses excess organic matter into advanced resources suitable for spacebound structures."
-		civic_hive_catalytic_processing_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Catalytic Production§!\nReplaces ['concept_tec_specialist_job_alloy_drone_plural_icon'] with ['concept_tec_specialist_job_catalytic_drone_icon'] jobs.\n\n$tec_loc_c_unlocks_feature$ §H£alloys£ Biolytic Reaction§!\n§Y£building£ Food Processing§! buildings increase the output of §Y£job_catalytic_drone£ $job_catalytic_drone_plural$§! by §G5%§! per §Y£society£ Food Production Technology§! researched (such as Eco-Simulation), up to §G20%§!, based on the building upgrade.\n§HThis bonus is disabled when a similar alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!"
+		civic_hive_catalytic_processing_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Catalytic Production§!\nReplaces ['concept_tec_specialist_job_alloy_drone_plural_icon'] with ['concept_tec_specialist_job_catalytic_drone_icon'] jobs.\n\n$tec_loc_c_unlocks_feature$ §H£alloys£ Biolytic Reaction§!\n§Y£building£ Food Processing§! buildings increase the output of §Y£job_catalytic_drone£ $job_catalytic_drone_plural$§! by §G5%§! per §Y£society£ Food Production Technology§! researched (such as Eco-Simulation), up to §G20%§!, based on the building upgrade, increased by §Y$tec_loc_planet_ascension_plural$§!.\n§HThis bonus is disabled when a similar alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!"
 
 		civic_machine_catalytic_processing:1 "§P£tec_civic_job£§!Biological Reprocessing"
 		civic_machine_catalytic_processing_desc:0 "['concept_tec_job_alteration_civics_foundry']\n\nThe Machine Intelligence reprocesses redundant organic matter into advanced resources suitable for spacebound structures."
-		civic_machine_catalytic_processing_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Catalytic Production§!\nReplaces ['concept_tec_specialist_job_fabricator_plural_icon'] with ['concept_tec_specialist_job_catalytic_drone_icon'] jobs.\n\n$tec_loc_c_unlocks_feature$ §H£alloys£ Biolytic Reaction§!\n§Y£building£ Food Processing§! buildings increase the output of §Y£job_catalytic_drone£ $job_catalytic_drone_plural$§! by §G5%§! per §Y£society£ Food Production Technology§! researched (such as Eco-Simulation), up to §G20%§!, based on the building upgrade.\n§HThis bonus is disabled when a similar alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!"
+		civic_machine_catalytic_processing_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Catalytic Production§!\nReplaces ['concept_tec_specialist_job_fabricator_plural_icon'] with ['concept_tec_specialist_job_catalytic_drone_icon'] jobs.\n\n$tec_loc_c_unlocks_feature$ §H£alloys£ Biolytic Reaction§!\n§Y£building£ Food Processing§! buildings increase the output of §Y£job_catalytic_drone£ $job_catalytic_drone_plural$§! by §G5%§! per §Y£society£ Food Production Technology§! researched (such as Eco-Simulation), up to §G20%§!, based on the building upgrade, increased by §Y$tec_loc_planet_ascension_plural$§!.\n§HThis bonus is disabled when a similar alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!"
 	# /
 
 	# Crafters
@@ -1309,7 +1330,7 @@
 
 	civic_tec_regular_quantum_alloys:0 "§P£tec_civic_job£§!Quantic Forging"
 	civic_tec_regular_quantum_alloys_desc:0 "['concept_tec_job_alteration_civics_foundry']\n\nThe use of quantum entanglement techniques during alloy refining processes provides superdense and efficient alloys, hyper-bonded at a sub-atomic level, by applying intense amounts of energy."
-	civic_tec_regular_quantum_alloys_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Quantic Compression§!\n['concept_tec_specialist_job_foundry_plural_icon'] swap half their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n\n$tec_loc_c_unlocks_feature$ §H£energy£ Electric Overcharge§!\n£building£ §Y$building_energy_grid$s§! increase the output of §Y£job_foundry£ Foundry§! jobs by §G5%§! per §Y£physics£ Energy Production Technology§! researched (such as $tech_power_plant_2$), up to §G20%§!, based on the building upgrade.\n§HThis production bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n"
+	civic_tec_regular_quantum_alloys_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Quantic Compression§!\n['concept_tec_specialist_job_foundry_plural_icon'] swap half their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n\n$tec_loc_c_unlocks_feature$ §H£energy£ Electric Overcharge§!\n£building£ §Y$building_energy_grid$s§! increase the output of §Y£job_foundry£ Foundry§! jobs by §G5%§! per §Y£physics£ Energy Production Technology§! researched (such as $tech_power_plant_2$), up to §G20%§!, based on the building upgrade, increased by §Y$tec_loc_planet_ascension_plural$§!.\n§HThis production bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n"
 	#OLD_civic_tec_regular_quantum_alloys_tooltip:0 "['concept_tec_job_foundry_quantum_plural_icon'] swap half their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n$mod_base_planet_metallurgists$ Output from $mod_base_planet_technician$: §G+1%§!\n\n§HThis production bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n"
 
 	civic_tec_corporate_quantum_alloys:0 "§P£tec_civic_job£§!Quantic Alloy-Profiteering"
@@ -1318,11 +1339,11 @@
 
 	civic_tec_hive_quantum_alloys:0 "§P£tec_civic_job£§!Quantic Moulding"
 	civic_tec_hive_quantum_alloys_desc:0 "$civic_tec_regular_quantum_alloys_desc$"
-	civic_tec_hive_quantum_alloys_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Quantic Compression§!\n['concept_tec_specialist_job_alloy_drone_plural_icon'] swap half their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n\n$tec_loc_c_unlocks_feature$ §H£energy£ Electric Overcharge§!\n£building£ §Y$building_energy_grid$s§! increase the output of §Y£job_foundry£ Foundry§! jobs by §G5%§! per §Y£physics£ Energy Production Technology§! researched (such as $tech_power_plant_2$), up to §G20%§!, based on the building upgrade.\n§HThis production bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n"
+	civic_tec_hive_quantum_alloys_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Quantic Compression§!\n['concept_tec_specialist_job_alloy_drone_plural_icon'] swap half their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n\n$tec_loc_c_unlocks_feature$ §H£energy£ Electric Overcharge§!\n£building£ §Y$building_energy_grid$s§! increase the output of §Y£job_foundry£ Foundry§! jobs by §G5%§! per §Y£physics£ Energy Production Technology§! researched (such as $tech_power_plant_2$), up to §G20%§!, based on the building upgrade, increased by §Y$tec_loc_planet_ascension_plural$§!.\n§HThis production bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n"
 
 	civic_tec_machine_quantum_alloys:0 "§P£tec_civic_job£§!Quantic Meta-Fabrication"
 	civic_tec_machine_quantum_alloys_desc:0 "$civic_tec_regular_quantum_alloys_desc$"
-	civic_tec_machine_quantum_alloys_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Quantic Compression§!\n['concept_tec_specialist_job_fabricator_plural_icon'] swap half their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n\n$tec_loc_c_unlocks_feature$ §H£energy£ Electric Overcharge§!\n£building£ §Y$building_energy_grid$s§! increase the output of §Y£job_foundry£ Foundry§! jobs by §G5%§! per §Y£physics£ Energy Production Technology§! researched (such as $tech_power_plant_2$), up to §G20%§!, based on the building upgrade.\n§HThis production bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n"
+	civic_tec_machine_quantum_alloys_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Quantic Compression§!\n['concept_tec_specialist_job_fabricator_plural_icon'] swap half their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n\n$tec_loc_c_unlocks_feature$ §H£energy£ Electric Overcharge§!\n£building£ §Y$building_energy_grid$s§! increase the output of §Y£job_foundry£ Foundry§! jobs by §G5%§! per §Y£physics£ Energy Production Technology§! researched (such as $tech_power_plant_2$), up to §G20%§!, based on the building upgrade, increased by §Y$tec_loc_planet_ascension_plural$§!.\n§HThis production bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n"
 
  # former civic_labour_unions
 	civic_tec_regular_labour_unions:0 "§P£tec_civic_job£§!Labour Unions"
@@ -1401,8 +1422,23 @@
 	civic_nationalistic_zeal_desc:0 "['concept_tec_basic_civic']\n\nA strong sense of nationalistic pride permeates all layers of this society."
 	civic_nationalistic_zeal_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£unity£ Driven Bellicosity§!\nThe §YImperialist§! faction will produce §Y4§! times more additional §Y$tec_loc_unity$§! while at war."
 
-	civic_ascensionists:0 "§R§!Ascensionists"
-	civic_ascensionists_desc:0 "['concept_tec_basic_civic']\n\nThe ultimate goal of this empire is to ascend to ever greater levels of fulfillment."
+	# Ascensionist
+		civic_ascensionists:0 "§R§!Ascensionists"
+		civic_ascensionists_desc:0 "['concept_tec_basic_civic']\n\nThe ultimate goal of this empire is to ascend to ever greater levels of fulfillment."
+		civic_ascensionists_tooltip: "$tec_loc_c_initial_pick$ §H£unity£ Path of Ascension§!\nNew colonies within the §HCapital sector§! get §G+1§! §YAscension Tier§!."
+
+		civic_corporate_ascensionists:1 "§R§!Gigacorp"
+		civic_corporate_ascensionists_desc:0 "$civic_ascensionists_desc$"
+		civic_corporate_ascensionists_tooltip: "$civic_ascensionists_tooltip$"
+
+		civic_machine_ascensionists:0 "§R§!Elevational Hypotheses"
+		civic_machine_ascensionists_desc:0 "['concept_tec_basic_civic']\n\nThis Machine Intelligence is unusually obsessed with the metaphysical aspects of its core algorithms."
+		civic_machine_ascensionists_tooltip: "$civic_ascensionists_tooltip$"
+
+		civic_hive_ascensionists:0 "§R§!Elevational Contemplations"
+		civic_hive_ascensionists_desc:0 "['concept_tec_basic_civic']\n\nThe Hive Mind is particularly concerned with the metaphysical health of its being, and continually seeks means of self-improvement."
+		civic_hive_ascensionists_tooltip: "$civic_ascensionists_tooltip$"
+	# /
 
 	civic_corporate_dominion:0 "§R§!Mercantile Dominion"
 	civic_corporate_dominion_desc:0 "['concept_tec_basic_civic']\n\nTrade is a cornerstone of a successful economy. Merchants of the Empire have organized themselves into an Alliance, for the purposes of mutual benefit and prosperity. " 
@@ -1898,8 +1934,6 @@
 	civic_public_relations_specialists:0 "§R§!Public Relations Specialists"
 	civic_public_relations_specialists_desc:0 "['concept_tec_basic_civic']\n\nIf you can control what someone thinks, then you can also control their behavior. This Megacorporation has a virtual army of specialists ready to engage in battles of public opinion."
 
-	civic_corporate_ascensionists:1 "§R§!Gigacorp"
-	civic_corporate_ascensionists_desc:0 "$civic_ascensionists_desc$"
 
  # /
  # Evolved
@@ -2255,8 +2289,6 @@
 	civic_hive_subsumed_will_desc:0 "['concept_tec_basic_civic']\n\nThe Hive Mind has sharpened its focus and is very capable of propagating its will even through the most autonomous of drones."
 	civic_hive_subsumed_will_effects:1 "$tec_loc_c_unlocks_feature$ §H£pop£ Drone Relocation§!\nWaives all £unity£ Unity costs for £pop£ §YDrone Resettlement§!."
 
-	civic_hive_ascensionists:0 "§R§!Elevational Contemplations"
-	civic_hive_ascensionists_desc:0 "['concept_tec_basic_civic']\n\nThe Hive Mind is particularly concerned with the metaphysical health of its being, and continually seeks means of self-improvement."
  # /
  # Evolved
 	civic_tec_hive_frenzy: "§R§!Reproductive Frenzy"
@@ -2560,7 +2592,7 @@
 
 	civic_machine_built_to_last:0 "§R§!Built to Last"
 	civic_machine_built_to_last_desc:0 "['concept_tec_basic_civic']\n\nBuilt to an exceptional standard, individual units of this Machine Empire require only a minimum of operational maintenance and excel on resilience and long-term design."
-	civic_machine_rockbreakers_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£job_purge£ Avoided Obsolescence§!\nReduces the chance of §Y£job_purge£ Decommision§! of Machine Leaders by §G50%§!"
+	civic_machine_built_to_last_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£job_purge£ Avoided Obsolescence§!\nReduces the chance of §Y£job_purge£ Decommision§! of Machine Leaders by §G50%§!"
 
 	civic_machine_builder:0 "§R§!Constructobot"
 	civic_machine_builder_desc:0 "['concept_tec_basic_civic']\n\nResponsible for organizing all planetary construction since its inception, the Machine Intelligence executes efficiently on all manner of facility construction projects."
@@ -2582,9 +2614,6 @@
 
 	civic_machine_ota_updates:0 "§R§!OTA Updates"
 	civic_machine_ota_updates_desc:0 "['concept_tec_basic_civic']\n\nUnits of this Machine Empire use wireless receptors to receive behavioral updates in real-time."
-
-	civic_machine_ascensionists:0 "§R§!Elevational Hypotheses"
-	civic_machine_ascensionists_desc:0 "['concept_tec_basic_civic']\n\nThis Machine Intelligence is unusually obsessed with the metaphysical aspects of its core algorithms."
 
  # /
  # Evolved
