--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -92,6 +92,11 @@
 		councilor_civic_tec_regular_inventinkers_desc:0 "$TITLE$s are top-of-tier tinkers, chosen by tinkers guilds and the government itself, to oversee the design and creation of new tools and inventions."
 		councilor_civic_tec_regular_inventinkers_custom_modifier:0 "NOT USED"
 
+		councilor_civic_tec_regular_worker_coop: "General Secretary of Unions"
+		councilor_civic_tec_regular_worker_coop_female: "$councilor_worker_coop$"
+		councilor_civic_tec_regular_worker_coop_desc: "The democratically-appointed $TITLE$ ensures clear and concise communication between bureaucratic lobbies and our worker members."
+		councilor_civic_tec_regular_worker_coop_custom_modifier_desc:1 "§Y$job_steward_plural_with_icon$§! produce §G+0.25§! $r_trade_value$ and §G+0.25§! $r_amenities$"
+
 		councilor_civic_tec_regular_socialguards:0 "Protector of Rights"
 		councilor_civic_tec_regular_socialguards_female:0 "$councilor_civic_tec_regular_socialguards$"
 		councilor_civic_tec_regular_socialguards_desc:0 "The $TITLE$ takes charge of ensuring the protection and rights of all the population."
@@ -604,6 +609,10 @@
 	councilor_civic_tec_corporate_dystopian_society_female:0 "$councilor_civic_tec_corporate_dystopian_society$"
 	councilor_civic_tec_corporate_dystopian_society_desc:0 "The $TITLE$ seeks out corruption and extinguishes it before it can spread."
 	councilor_civic_tec_corporate_dystopian_society_custom_modifier:0 "- $mod_pop_cat_ruler_happiness$: §G+1%§!\n- $mod_planet_enforcers_trade_value_produces_add$: §G+0.4§!"
+
+	councilor_civic_tec_corporate_selective_kinship: "Businessman for the Kin"
+	councilor_civic_tec_corporate_selective_kinship_female: "Businesswoman for the Kin"
+	councilor_civic_tec_corporate_selective_kinship_desc: "The $TITLE$ amplifies the voice of our rightful customers."
 
 	councilor_civic_tec_corporate_navaltraders:0 "Naval Insurer"
 	councilor_civic_tec_corporate_navaltraders_female:0 "$councilor_civic_tec_corporate_navaltraders$"
