--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -710,7 +710,7 @@ l_english:
 	district_tec_hab_extraction_effect_production:0 "This $tec_loc_district$ produce extra §Y$tec_loc_basic_resources$§! based on the the number of §YOrbitals§! of its type (£energy£ £minerals£), or §Y£building£ Hydroponic§! buildings (£food£)."
 	district_tec_hab_extraction_effect_buildings:0 "$t$- Increases the effects of §Y£building£ Habitat Orbital Buildings§!."
 	district_tec_hab_extraction_effect_swap:0 "$t$- Replaceable via §Y$tec_loc_planet_decision$§!."
-	district_tec_hab_extraction_effect_orbitals:0 "\n§HCurrent Orbitals:§! $TABBED_NEW_LINE$ $tec_loc_energy$ §Y[solar_system.GetNumOrbitalsEnergy]/[solar_system.GetMaxOrbitalsEnergy]§! $TABBED_NEW_LINE$ $tec_loc_minerals$ §Y[solar_system.GetNumOrbitalsMining]/[solar_system.GetMaxOrbitalsMining]§!\n\n"
+	district_tec_hab_extraction_effect_orbitals:0 "\n§HCurrent Orbitals:§! $TABBED_NEW_LINE$ $tec_loc_energy$ §Y[solar_system.GetNumOrbitalsEnergy]/[solar_system.GetMaxOrbitalsEnergy]§! $TABBED_NEW_LINE$ $tec_loc_minerals$ §Y[solar_system.GetNumOrbitalsMining]/[solar_system.GetMaxOrbitalsMining]§!\n\n§HCurrent Hydroponic Boost:§! $TABBED_NEW_LINE$ $tec_loc_food$ +§Y[this.GetHydroponicNumbers]§!\n\n"
 
 	# Energy
 	district_hab_energy_effect_production:0 "This $tec_loc_district$ produce extra §Y$tec_loc_energy$§! based on the the number of §YOrbitals§! of its type (£energy£)"
