more civic changes + variable ethics

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -434,11 +434,11 @@
 
  # Egal
 	civic_tec_regular_worker_coop:0 "§G£tec_civic_ruler£§!Worker Collective"
-	civic_tec_regular_worker_coop_desc:0 "['concept_tec_ruler_replace_civic']\n\nMembers of this society enjoy an equal share in the labors, profits and aspirations of the cooperative's ventures."
+	civic_tec_regular_worker_coop_desc:0 "['concept_tec_ruler_replace_civic']\n['concept_tec_living_standard_civic']\n\nMembers of this society enjoy an equal share in the labors, profits and aspirations of the cooperative's ventures."
 	civic_tec_regular_worker_coop_tooltip:0 "$civic_tooltip_worker_coop_effects$"
 
 	civic_worker_coop:0 "§G£tec_civic_ruler£§!Worker Cooperative"
-	civic_worker_coop_desc:0 "['concept_tec_ruler_replace_civic']\n\nMembers of this society enjoy an equal share in the labors, profits and aspirations of the cooperative's ventures."
+	civic_worker_coop_desc:0 "['concept_tec_ruler_replace_civic']\n['concept_tec_living_standard_civic']\n\nMembers of this society enjoy an equal share in the labors, profits and aspirations of the cooperative's ventures."
 	civic_tooltip_worker_coop_effects:0 "$tec_loc_c_unlocks_standard$ §H£pop£ $living_standard_worker_ownership$§!\nUnder such living standard:\n- §YAll§! pops have high $r_consumer_goods$ Upkeep, and produce a high amount of §Y$tec_loc_trade$§!.\nDiscriminatory living standards are §RRestricted§! (example: §YAcademic Privilege§!).\n\n$tec_loc_c_unlocks_feature$ §H£trade_value£ Mutual Aid§!\nAllows the §Y$trade_policy_mutual_aid$§! Trade Policy, which converts $r_trade_value$ to $r_energy$, $r_minerals$ and $r_food$.\n\n$tec_loc_c_unlocks_feature$ §H£unity£ Self-Governance§!\nReplaces replace §YALL§! their ['concept_tec_ruler_job_standard_plural_icon'] with ['concept_tec_ruler_job_steward_plural_icon']."
 
 
@@ -690,12 +690,12 @@
 	# /
 
 	# Selective Kinship
-		civic_selective_kinship: "Selective Kinship"
-		civic_selective_kinship_desc: "In an uncertain universe, only kin can be trusted. This civilization is selective about the species it defines as equals."
+		civic_selective_kinship: "§L£tec_civic_feature£§!Selective Kinship"
+		civic_selective_kinship_desc: "['concept_tec_feature_civic']\n\nIn an uncertain universe, only kin can be trusted. This civilization is selective about the species it defines as equals."
 		civic_selective_kinship_tooltip: "$tec_loc_c_unlocks_feature$ §H£opinion£ Trust not the Xeno§!\nOpinion of Empires with shared ['concept_species_class']: §G+100§!\nOpinion of other Empires: §R-50§!\n£pops£ §YPops§! of our §YSpecies Class§! have Full Citizenship\nOther £pops£ §YPops§! are barred from Full Citizenship"
 
 		civic_tec_corporate_selective_kinship: "Bussiness Kinship"
-		civic_tec_corporate_selective_kinship_desc: "In an uncertain universe, only kin can be trusted. This corporation is selective about the species it defines as suitable for business."
+		civic_tec_corporate_selective_kinship_desc: "['concept_tec_feature_civic']\n\nIn an uncertain universe, only kin can be trusted. This corporation is selective about the species it defines as suitable for business."
 		civic_tec_corporate_selective_kinship_tooltip: "$civic_selective_kinship_tooltip$"
  # /
 
