fruitful partnership mirror + more

--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -68,11 +68,14 @@
 	tec_loc_c_initial_pick:0 "§EInitial pick bonus:§!"
 
 	tec_loc_c_restriction:0 "§ERestriction:§!"
+	tec_loc_c_penalty:0 "§EPenalty:§!"
 	tec_loc_c_gameplay_alteration:0 "§EGameplay Alteration:§!"
 
 	tec_loc_c_warning:0 "§E£trigger_tec_warning£ Warning:§!"
 
 	tec_loc_c_modifiers:0 "§EModifiers:§!"
+
+	tec_loc_c_combinations:0 "§EFeature Combinations:§!"
 
 	tec_loc_c_stratum: "Stratum"
 	tec_loc_c_eco_cat: "Economic Category"
@@ -81,6 +84,10 @@
 # /
 
 # Civic types
+	concept_tec_origin_replace_civic: "Origin Replace Civic"
+	concept_tec_origin_replace_civics: "Origin Replace Civics"
+	concept_tec_origin_replace_civic_desc: "Origin Replace civics are civics that allow adding an existing origin as civic for making builds more flexible. These civics disable other Origin Civics, as it's effectively having a second origin."
+
 	concept_tec_origin_civic: "Origin Civic"
 	concept_tec_origin_civics: "Origin Civics"
 	concept_tec_origin_civic_desc: "Origin civics are origin-exclusive civics that alter the playstyle of a specific origin, or enhance it further. These usually either reinforce the origin's thematic or give it a new twist."
@@ -1469,6 +1476,12 @@
 	concept_tec_living_standard_shared_burden_alias_icon: "£living_standard£ $living_standard_shared_burden$"
 	concept_tec_living_standard_shared_burden_desc: "$living_standard_shared_burden_tooltip_delayed$\n\n$living_standard_shared_burden_tooltip$\n\n$tec_loc_living_standard_pop_effects$\n$mod_pop_category_rulers_consumer_goods_upkeep_add$: §R+$@living_standard_luxuries_shared_burden$§!\n$mod_pop_category_specialists_consumer_goods_upkeep_add$: §R+$@living_standard_luxuries_shared_burden$§!\n$mod_pop_category_workers_consumer_goods_upkeep_add$: §R+$@living_standard_luxuries_shared_burden$§!\n$mod_tec_ruler_lifestyle_trade_value_add$: §G+$@trade_value_shared_burden$§!\n$mod_tec_specialist_lifestyle_trade_value_add$: §G+$@trade_value_shared_burden$§!\n$mod_tec_worker_lifestyle_trade_value_add$: §G+$@trade_value_shared_burden$§!"
 
+  concept_tec_living_standard_worker_ownership: "$living_standard_worker_ownership$ Living Standard"
+	concept_tec_living_standard_worker_ownership_alias: "$living_standard_worker_ownership$"
+	concept_tec_living_standard_worker_ownership_icon: "£living_standard£ $living_standard_worker_ownership$ Living Standard"
+	concept_tec_living_standard_worker_ownership_alias_icon: "£living_standard£ $living_standard_worker_ownership$"
+	concept_tec_living_standard_worker_ownership_desc: "$living_standard_worker_ownership_tooltip_delayed$\n\n$living_standard_worker_ownership_tooltip$\n\n$tec_loc_living_standard_pop_effects$\n$mod_pop_category_rulers_consumer_goods_upkeep_add$: §R+$@living_standard_luxuries_high$§!\n$mod_pop_category_specialists_consumer_goods_upkeep_add$: §R+$@living_standard_luxuries_high$§!\n$mod_pop_category_workers_consumer_goods_upkeep_add$: §R+$@living_standard_luxuries_high$§!\n$mod_pop_category_slave_consumer_goods_upkeep_add$: §R+$@living_standard_luxuries_none$§!\n$mod_tec_ruler_lifestyle_trade_value_add$: §G+$@trade_value_high$§!\n$mod_tec_specialist_lifestyle_trade_value_add$: §G+$@trade_value_high$§!\n$mod_tec_worker_lifestyle_trade_value_add$: §G+$@trade_value_high$§!"
+
   concept_tec_living_standard_dystopian_society: "$living_standard_dystopian_society$ Living Standard"
 	concept_tec_living_standard_dystopian_society_alias: "$living_standard_dystopian_society$"
 	concept_tec_living_standard_dystopian_society_icon: "£living_standard£ $living_standard_dystopian_society$ Living Standard"
@@ -1528,6 +1541,20 @@
 	concept_tec_living_standard_hive_mind_icon: "£living_standard£ $living_standard_hive_mind$ Living Standard"
 	concept_tec_living_standard_hive_mind_alias_icon: "£living_standard£ $living_standard_hive_mind$"
 	concept_tec_living_standard_hive_mind_desc: "$living_standard_hive_mind_tooltip_delayed$\n\n$living_standard_hive_mind_tooltip$"
+ # /
+ # Evolved specific living standards
+  concept_tec_living_standard_tec_shared_ownership: "$living_standard_tec_shared_ownership$ Living Standard"
+	concept_tec_living_standard_tec_shared_ownership_alias: "$living_standard_tec_shared_ownership$"
+	concept_tec_living_standard_tec_shared_ownership_icon: "£living_standard£ $living_standard_tec_shared_ownership$ Living Standard"
+	concept_tec_living_standard_tec_shared_ownership_alias_icon: "£living_standard£ $living_standard_tec_shared_ownership$"
+	concept_tec_living_standard_tec_shared_ownership_desc: "$living_standard_tec_shared_ownership_tooltip_delayed$\n\n$living_standard_tec_shared_ownership_tooltip$\n\n$tec_loc_living_standard_pop_effects$\n$mod_pop_category_rulers_consumer_goods_upkeep_add$: §R+$@living_standard_luxuries_shared_burden$§!\n$mod_pop_category_specialists_consumer_goods_upkeep_add$: §R+$@living_standard_luxuries_shared_burden$§!\n$mod_pop_category_workers_consumer_goods_upkeep_add$: §R+$@living_standard_luxuries_shared_burden$§!\n$mod_tec_ruler_lifestyle_trade_value_add$: §G+$@trade_value_high$§!\n$mod_tec_specialist_lifestyle_trade_value_add$: §G+$@trade_value_high$§!\n$mod_tec_worker_lifestyle_trade_value_add$: §G+$@trade_value_high$§!"
+
+  concept_tec_living_standard_tec_chemical_dystopian_society: "$living_standard_tec_chemical_dystopian_society$ Living Standard"
+	concept_tec_living_standard_tec_chemical_dystopian_society_alias: "$living_standard_tec_chemical_dystopian_society$"
+	concept_tec_living_standard_tec_chemical_dystopian_society_icon: "£living_standard£ $living_standard_tec_chemical_dystopian_society$ Living Standard"
+	concept_tec_living_standard_tec_chemical_dystopian_society_alias_icon: "£living_standard£ $living_standard_tec_chemical_dystopian_society$"
+	concept_tec_living_standard_tec_chemical_dystopian_society_desc: "$living_standard_tec_chemical_dystopian_society_tooltip_delayed$\n\n$living_standard_tec_chemical_dystopian_society_tooltip$\n\n$tec_loc_living_standard_pop_effects$\nTO DO"
+
  # /
  # Edict
 	tec_loc_edict_effects_until_cancelled: "§EEffects:§!\nLasts §HUntil Cancelled§!"
