--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -5,6 +5,16 @@
 	living_standard_hive_mind_research:0 "Subprocessing Drone"
 	living_standard_hive_mind_research_tooltip:0 "Though this kind of drone keeps its simplicity and spartan subsistence, it uses part of its consciousness link to boost the collective while develops its assigned tasks."
 	living_standard_hive_mind_research_tooltip_delayed:0 "§LThe needs of the individual and the needs of all are one and the same.§!"
+
+ # Shared burdens + Worker coop
+	living_standard_tec_shared_ownership: "Shared Ownership"
+	living_standard_tec_shared_ownership_tooltip: "$living_standard_tec_shared_ownership$ guarantees every worker a democratic share in the empire economical communal growth. Living costs, resources and social responsibilities are distributed evenly to all members."
+	living_standard_tec_shared_ownership_tooltip_delayed: "§LTo each a voice, from each according to their abilities, a share, and the dividends of a society built by our labor, to sate everyone's needs.§!"
+ # /
+ # Chemical Barons + Dystopian Society
+	living_standard_tec_chemical_dystopian_society:0 "Chemical Dystopia"
+	living_standard_tec_chemical_dystopian_society_tooltip:1 "$living_standard_tec_chemical_society$ makes the ruling class the only recipient of necessities, subduing the lower classes to a constant control and subjugation with the euphoric stupor of subduing drugs and stupefacients, while the higher classes enjoy top-tier artificial enhancements and joy.\n\n$DYSTOPIAN_LIVING_STANDARDS_POP_EFFECTS$\n\n$UNEMPLOYED_REDUCED_HAPPINESS$"
+	living_standard_tec_chemical_dystopian_society_tooltip_delayed:0 "§LThe common will know their place and enjoy the blissful embrace of chemicals. If they don't, we will double their dose.§!"
 # /
 
 # assimilation Rules
